--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Google Room
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
 
