Add dagger dependencies and basic dagger code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 ext {
     roomVersion = "1.1.1"
     androidVersion = "27.1.1"
+    daggerVersion = "2.16"
 }
 
 dependencies {
@@ -41,6 +42,10 @@ dependencies {
     // Google Room
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
+
+    // Dagger
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    annotationProcessor  "com.google.dagger:dagger-compiler:$daggerVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
