--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 ext {
     roomVersion = "1.1.1"
     androidVersion = "27.1.1"
+    archLifecycleVersion = "1.1.1"
 }
 
 dependencies {
@@ -41,6 +42,10 @@ dependencies {
     // Google Room
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
+
+    // Lifecycle
+    implementation 'android.arch.lifecycle:extensions:' + archLifecycleVersion
+    implementation 'android.arch.lifecycle:viewmodel:' + archLifecycleVersion
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
