--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ ext {
     roomVersion = "1.1.1"
     androidVersion = "28.0.0"
     archLifecycleVersion = "1.1.1"
+    navVersion = "1.0.0-alpha08"
 }
 
 dependencies {
@@ -43,6 +44,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$androidVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:recyclerview-v7:$androidVersion"
+    implementation 'com.android.support:design:28.0.0'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -55,8 +57,12 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:' + archLifecycleVersion
     implementation 'android.arch.lifecycle:viewmodel:' + archLifecycleVersion
 
+    // Navigation
+    implementation 'android.arch.navigation:navigation-fragment:' + navVersion
+    implementation 'android.arch.navigation:navigation-ui:' + navVersion
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
 }
