--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:' + navVersion
     implementation 'android.arch.navigation:navigation-ui:' + navVersion
 
+    // Material search view
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
