--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 ext {
     roomVersion = "1.1.1"
-    androidVersion = "28.0.0"
+    androidVersion = "28.0.0-alpha3"
     archLifecycleVersion = "1.1.1"
     navVersion = "1.0.0-alpha08"
 }
@@ -44,7 +44,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$androidVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:recyclerview-v7:$androidVersion"
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:design:' + androidVersion
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
